refactor: API 뷰 모듈 구조 개편 및 Dockerfile 네이밍 컨벤션 통일
- api/views/ 디렉토리 구조로 뷰 모듈 기능별 분리
  - routes.py: RoundTripRouteView 및 경로 관련 로직
  - favorites.py: FavoriteRouteViewSet 및 즐겨찾기 CRUD 로직
  - __init__.py: 공개 인터페이스 노출
- Dockerfile.graphHopper → dockerfile.graphhopper로 파일명 소문자 통일
- 관련된 docker-compose.yml 참조 경로 업데이트
- 기존 views.py 파일 제거

리팩토링으로 코드 구조 개선 및 일관된 네이밍 컨벤션 적용

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
   graphhopper:
     build:
       context: ./graphhopper
-      dockerfile: Dockerfile.graphHopper
+      dockerfile: dockerfile.graphhopper
       args:
         GH_VERSION: "10.0"
     image: graphhopper:10.0
